--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -5,6 +5,12 @@
         <field name="customize_show" eval="True"/>
     </record>
     
+    <template id="new_header_common_apps_latinchain_ai" inherit_id="web.layout">
+        <xpath expr="//head//script[last()]" position="after">
+            <script src="/website_pinetwork_games_odoo/static/src/js/common-apps/common_apps_ai_functions.js?v=1.103"></script>
+        </xpath>
+    </template>
+    
     <template id="assets_frontend" name="games_odoo_website" inherit_id="website.assets_frontend">  
         <xpath expr="link[last()]" position="after">  
             <link rel="stylesheet" href="/website_pinetwork_games_odoo/static/src/modals/colorbox/example3/colorbox.css" />
