--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_tetris.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_tetris.xml
@@ -25,7 +25,7 @@
                     <script src="/website_pinetwork_games_odoo/static/src/blockrain.js/assets/js/jquery-1.11.1.min.js"></script>
                     <script src="/website_pinetwork_games_odoo/static/src/blockrain.js/src/blockrain.jquery.libs.js"></script>
                     <script src="/website_pinetwork_games_odoo/static/src/blockrain.js/src/blockrain.jquery.src.js"></script>
-                    <script src="/website_pinetwork_games_odoo/static/src/blockrain.js/src/blockrain.jquery.themes.js"></script>
+                    <script src="/website_pinetwork_games_odoo/static/src/blockrain.js/src/blockrain.jquery.themes.js?v=1.108"></script>
                     
                     <link href='http://fonts.googleapis.com/css?family=Play:400,700' rel='stylesheet' type='text/css' />
                     <link rel="stylesheet" href="/website_pinetwork_games_odoo/static/src/blockrain.js/assets/css/style.css" />
