--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -125,9 +125,8 @@
                                 if(result)
                                 {
                                     //history.back();
-                                    location.href="/";
+                                    location.href="/index-nopopup";
                                 }
-                                location.href="/";
                             });
                         });
 
