--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -799,7 +799,7 @@
                                 if(result)
                                 {
                                     //history.back();
-                                    location.href="/";
+                                    window.location.href="/";
                                 }
                             });
                         });
