--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_snake.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_snake.xml
@@ -265,7 +265,7 @@
                             if(result)
                             {
                                 //history.back();
-                                location.href="/";
+                                window.location.href="/";
                             }
                         });
                         
