--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_sudoku.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_sudoku.xml
@@ -139,7 +139,7 @@
                                 if(result)
                                 {
                                     //history.back();
-                                    location.href="/";
+                                    window.location.href="/";
                                 }
                             });
                             
