--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -125,7 +125,7 @@
                                 if(result)
                                 {
                                     //history.back();
-                                    window.location.href="/index-nopopup";
+                                    window.location.href="/";
                                 }
                             });
                         });
