--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -150,7 +150,6 @@
                     <body t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                         <div id="open_mainnet_message" style="display:none;">You can Donate on LatinChain Mainnet and start using it everyday being verified during a month. Or access as unverified user.<br/>Which one you choose?.</div>
                         <div class="container form-group" style="text-align:center; max-width: 810px">
-                            <br/>
                             <div style="font-size: 90%; word-break: break-word;">
                                 <!--<div style="display: inline"><i class="fa-solid fa-link"></i></div> <div style="display: inline"><strong translate="no">test.latin-chain.com/latinchain-mainnet-redirect</strong>.-->
                                 <div style="display: inline" t-if="not onlymainnet">
@@ -185,10 +184,9 @@
                                 
                                 <!--<button class="openMainnetModal btn btn-success mb-2 o_default_snippet_text"><strong><div>Click here</div><div>(Go to LatinChain Mainnet)</div></strong></button>-->
                             </div>
-                            <!--
                             <div style="margin-bottom:5px" t-if="onlymainnet">
-                                <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="href-external btn btn-success font-weight-bold text-white border-success" style="border: 2px solid; filter: contrast(100%) !important;"><strong><div><i class="fa-solid fa-fingerprint"></i></div><div style="font-size:100%;" translate="no">DONATE</div><div style="font-size:80%;" translate="no"><div style="display: inline">Earn Latin points (<t t-esc="amount_latin_pay" />)</div> <div style="display: inline">(Mainnet)</div></div></strong></a>
-                            </div>-->
+                                <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="href-external btn btn-success font-weight-bold text-white border-success" style="border: 2px solid; filter: contrast(100%) !important;"><strong><div><i class="fa-solid fa-fingerprint"></i></div><div style="font-size:100%;" translate="no"><div style="display: inline">DONATE</div> <div style="display: inline">(UNLOCK)</div></div><div style="font-size:80%;" translate="no"><div style="display: inline">Earn Latin points (<t t-esc="amount_latin_pay" />)</div> <div style="display: inline">(Mainnet)</div></div></strong></a>
+                            </div>
                             <!--<br/>
                             <div class="container rounded" style="text-align:center; max-width: 810px; border:3px solid; padding:5px;">
                                 <div class="row">
