--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -315,6 +315,18 @@
                                             <h5 translate="no"><strong>#RadioForUs #PayPi &#128177;</strong></h5>
                                         </div>
                                         
+                                        <div style="margin-top:5px;">
+                                            <div style="display: inline">
+                                                Current minimum payment
+                                            </div>
+                                        </div>
+                                        <div style="word-break: break-word;">
+                                            <div style="display: inline">Pi <t t-esc="amount" /></div> <div style="display: inline">&#8776;</div> <div style="display: inline">USD <t t-esc="amount_price_topay_usd" /></div> 
+                                            <div style="border-radius: 50%; display: inline" data-bs-toggle="tooltip" title="Updated each minute (on Mainnet), and each 1 day (on Testnet)">
+                                                <i class="fa-solid fa-circle-info"></i>
+                                            </div>
+                                        </div>
+                                        
                                         <div style="margin-top:5px" class="justify-content-center">
                                             <input t-att-value="amount" id="pi_donate" name="pi_donate" type="number" min="0" step="0.01" class="numeric-decimal form-control" style="display: none;" lang="en-US"/>
                                             <button id="button_click" name="button_click" class="col-10 btn btn-success fw-bold text-black border-success" disabled="true" style="border: 2px solid; margin: 5px; max-width: 400px"><div><i class="fa-solid fa-money-bill-transfer"></i></div><div>Donate to unblock with <span t-esc="amount" /> Pi for 30 days from today</div><div style="font-size:80%;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">Earn Latin points (<t t-esc="amount_latin_pay" />)</div></button>
@@ -401,6 +413,13 @@
                           });
                         </script>-->
                     </div>
+                    
+                    <script>
+                        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+                        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                            return new bootstrap.Tooltip(tooltipTriggerEl)
+                        })
+                    </script>
                     
                     <br/><br/><br/><br/><br/>
                     
