--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -418,7 +418,7 @@
                     <body>
                         <div class="container form-group" style="text-align:center; max-width: 810px;">
                             <br/>
-                            <h3>You can find these, our most popular books, on Amazon by ASIN.</h3>
+                            <h3>You can find these, our most notable books, on Amazon by ASIN.</h3>
                             <br/>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://m.media-amazon.com/images/I/71Ir+19r4+L._SL1500_.jpg" width="120px" height="180px" /><br/><strong>How to develop a Pi App (webapp) on the Pi Network (ASIN: B0DK3NJ23V and ASIN: B0DK4N3XTB)</strong> (<div style="display:inline;">Tech</div>) (<div style="display:inline;">English</div>)</h5>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://m.media-amazon.com/images/I/71eGkTh9m0L._SL1500_.jpg" width="120px" height="180px" /><br/><strong>Odoo Technical Training en Español (ASIN: B0DJVY51LS and ASIN: B0DJX718Q2)</strong> (<div style="display:inline;">Tech</div>) (<div style="display:inline;">English</div> <div style="display:inline;">and</div> <div style="display:inline;">Spanish</div>)</h5>
