--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -418,7 +418,7 @@
                     <body>
                         <div class="container form-group" style="text-align:center; max-width: 810px;">
                             <br/>
-                            <h3>You can find these, our most notable books by ASIN or ISBN, on bookstores as Amazon or Iberlibro.</h3>
+                            <h3>You can find these, our most notable books by ASIN or ISBN, in bookstores as Amazon or Iberlibro.</h3>
                             <br/>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://m.media-amazon.com/images/I/71Ir+19r4+L._SL1500_.jpg" width="120px" height="180px" /><br/><strong>How to develop a Pi App (webapp) on the Pi Network<br/> (ASIN: B0DK3NJ23V and ASIN: B0DK4N3XTB)<br/> (ISBN: 979-8343272321)</strong><br/> (<div style="display:inline;">Tech</div>) (<div style="display:inline;">English</div>) <t t-if="with_links"><br/><a href="https://latin-chain.com/piapps-book" target="_blank">https://latin-chain.com/piapps-book</a></t></h5>
                             <h5 style="padding:10px;" class="border-gradient-rounded"><img src="https://m.media-amazon.com/images/I/71eGkTh9m0L._SL1500_.jpg" width="120px" height="180px" /><br/><strong>Odoo Technical Training en Español<br/> (ASIN: B0DJVY51LS and ASIN: B0DJX718Q2)<br/> (ISBN: 979-8342822534)</strong><br/> (<div style="display:inline;">Tech</div>) (<div style="display:inline;">English</div> <div style="display:inline;">and</div> <div style="display:inline;">Spanish</div>) <t t-if="with_links"><br/><a href="https://latin-chain.com/odoo-tech-book" target="_blank">https://latin-chain.com/odoo-tech-book</a></t></h5>
