--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -946,11 +946,11 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.607"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.608"></script>
                     
-                    <script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
+                    <script t-if="mainnet in ['Testnet OFF2']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
-                    <script type="text/javascript" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
+                    <script type="text/javascript" t-if="mainnet in ['Testnet OFF2']">
                       window._taboola = window._taboola || [];
                       _taboola.push({article:'auto'});
                       !function (e, f, u, i) {
@@ -1267,7 +1267,7 @@
                         </div>
                     </div>
                     
-                    <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
+                    <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet OFF2']">
                         
                         <!-- LatinChain Ad responsive 2 -->
                         
@@ -2780,7 +2780,7 @@
                         <br/>
                     </div>-->
                     
-                    <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
+                    <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet OFF2']">
                         <!-- LatinChain Ad responsive 2 -->
                         
                         <!--<ins class="adsbygoogle"
@@ -2837,7 +2837,7 @@
                             }
                     </style>
                     
-                    <script type="text/javascript" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
+                    <script type="text/javascript" t-if="mainnet in ['Testnet OFF2']">
                       window._taboola = window._taboola || [];
                       _taboola.push({flush: true});
                     </script>
