--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -153,7 +153,7 @@
                             <div style="font-size: 90%; word-break: break-word;">
                                 <div style="display: inline" t-if="not onlymainnet">
                                     <div style="display: inline"><i class="fa-solid fa-link"></i></div> <div style="display: inline"><strong translate="no">test.latin-chain.com/latinchain-mainnet-redirect</strong></div> 
-                                    <button style="font-size: 100%; display: inline" type="button" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="This modal (webpage on popup) will be displayed when load on LatinChain Mainnet (only if you are unverified). This Modal is at: test.latin-chain.com/latinchain-mainnet-redirect">
+                                    <button style="font-size: 100%; display: inline" type="button" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="This modal (webpage on popup) will be displayed when load on LatinChain Testnet (always). This Modal is at: test.latin-chain.com/latinchain-mainnet-redirect">
                                         Show tip
                                     </button>
                                 </div>
