--- a/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
+++ b/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
@@ -1701,7 +1701,7 @@
                                             
                                             passkey=data.passkey;
                                             
-                                            $("#show_pibrowser").hide();
+                                            $(".show_pibrowser").hide();
                                             if(data.unblocked)
                                             {
                                                 unblocked = data.unblocked;
@@ -1819,7 +1819,7 @@
                                         setTimeout(function ()
                                         {
                                             if(pi_user_id == "" &amp;&amp; pi_user_code == "")
-                                                $("#show_pibrowser").show();
+                                                $(".show_pibrowser").show();
                                         }, 5000);
                                     }, 10000);
                                 }else if(confirm($("#modal_login_latinchain_v2_message").text()))
@@ -1834,7 +1834,7 @@
                                         setTimeout(function ()
                                         {
                                             if(pi_user_id == "" &amp;&amp; pi_user_code == "")
-                                                $("#show_pibrowser").show();
+                                                $(".show_pibrowser").show();
                                         }, 5000);
                                     }, 10000);
                                 }
@@ -1923,8 +1923,12 @@
                         <!--<button videourl="https://www.youtube.com/embed/videoseries?si=9l1QgZLWWPWYInZ0&amp;list=PLmedLgLFYxR0QKTg-F7z1XtUS852518H-" class="btn btn-danger open_streaming" ><div style="display:inline;"><i class="fab fa-youtube"></i></div> <div style="display:inline;">LatinChain Academy</div></button>-->
                         <br/><br/>
                         
-                        <div id="show_pibrowser" style="display: none">
+                        <div class="show_pibrowser" style="display: none">
                             Access throught Pi Browser (Pi Network).
+                        </div>
+                        <div class="show_pibrowser" style="display: none">
+                            <a t-if="mainnet in ['Testnet ON', 'Testnet OFF']" href="https://latinchaintest9869.pinet.com" target="_blank" class="col-8 gototestnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Testnet</div></a>
+                            <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" href="https://latinchain.pinet.com" target="_blank" class="col-8 gotomainnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Mainnet</div></a>
                         </div>
                         <div id="show_content" style="display: none; background-color: white">
                         </div>
