--- a/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
+++ b/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
@@ -1927,8 +1927,8 @@
                             Access throught Pi Browser (Pi Network).
                         </div>
                         <div class="show_pibrowser" style="display: none">
-                            <a t-if="mainnet in ['Testnet ON', 'Testnet OFF']" href="https://latinchaintest9869.pinet.com" target="_blank" class="col-8 gototestnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Testnet</div></a>
-                            <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" href="https://latinchain.pinet.com" target="_blank" class="col-8 gotomainnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Mainnet</div></a>
+                            <a t-if="mainnet in ['Testnet ON', 'Testnet OFF']" href="https://latinchaintest9869.pinet.com/latinchain-academy" target="_blank" class="col-8 gototestnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Testnet</div></a>
+                            <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" href="https://latinchain.pinet.com/latinchain-academy" target="_blank" class="col-8 gotomainnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Mainnet</div></a>
                         </div>
                         <div id="show_content" style="display: none; background-color: white">
                         </div>
