--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -946,7 +946,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.615"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.614"></script>
                     
                     <script t-if="mainnet in ['Testnet OFF2']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     
@@ -2299,6 +2299,13 @@
                                             <div class="row" style="text-align: left;">
                                                 <div class="col-2"></div>
                                                 <div class="col-10"><a id="calendarplayer" href="/calendarplayer" class="col-10 btn btn-outline-success font-weight-bold text-black border-success calendarplayer" style="border: 2px solid;"><div style=""><i class="fa-solid fa-calendar-days"></i></div><div style="font-size:100%;" translate="no">CALENDAR CONVERTER</div><div style="font-size:80%;">Convert from Gregorian to Mayan calendar (Long count)</div><div style="font-size:80%;">Developed with DeepSeek AI</div><div style="font-size:80%;" ><div style="display:inline">Utility</div> <div style="display:inline">|</div> <div style="display:inline">Calendar</div></div></a></div>
+                                                <div class="col-0"></div>
+                                            </div>
+                                        </li>
+                                        <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-timezoneplayer" style="">
+                                            <div class="row" style="text-align: left;">
+                                                <div class="col-2"></div>
+                                                <div class="col-10"><a id="timezoneplayer" href="/timezoneplayer" class="col-10 btn btn-outline-success font-weight-bold text-black border-success timezoneplayer" style="border: 2px solid;"><div style=""><i class="fa-solid fa-calendar-days"></i></div><div style="font-size:100%;" translate="no">TIMEZONE CONVERTER</div><div style="font-size:80%;">Convert Timezones</div><div style="font-size:80%;">Developed with Gemini AI</div><div style="font-size:80%;" ><div style="display:inline">Utility</div> <div style="display:inline">|</div> <div style="display:inline">Timezone</div></div></a></div>
                                                 <div class="col-0"></div>
                                             </div>
                                         </li>
